# monorepo

./: .bazelignore  .bazelrc  .envrc  .eslintrc  .eslintrc.cjs  .eslintrc.js  .gitignore  .gitlab-ci.yml  .npmrc  .pre-commit-config.yaml  .prettierrc  .sqlfluff  .sqlfluffignore  .swcrc  .yamllint.yaml  BUILD.bazel  MODULE.bazel  Makefile  README.md  TODO.md  WORKSPACE  deps.bzl  flake.nix  go.mod  go.sum  go.work.sum  jest.config.js  jest.config.json  jest.config.ts  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  region.hcl  skaffold.example.yaml  skaffold.yaml  tsconfig.json  tsconfig.svelte.json
bazel/go/examples/go-image/: BUILD.bazel  Dockerfile  image_test.sh  main_test.go
bazel/go/examples/go-server/: BUILD.bazel  main.go  main_test.go
bazel/js/examples/js-bin-with-dep/: BUILD.bazel  index.js  index.test.js  package.json
bazel/js/examples/js-lib/: BUILD.bazel  package.json
bazel/js/examples/js-lib-consumer/: BUILD.bazel  index.js  index.test.js  package.json
bazel/js/examples/ts-node-image/: BUILD.bazel
bazel/js/examples/ts-own-packagejson/: BUILD.bazel  README.md  index.ts  package.json
devx/go/: BUILD.bazel  exports.bzl  tools.go  workspace.bzl
devx/go/scripts/lib/: BUILD.bazel  lib.go  lib_test.go  mklib.sh
devx/scripts/: BUILD.bazel  devenv.sh  exports.bzl  gazelle-update.sh  minikube_running.sh  print_bazel_env.sh  sh_binary_cwd.bzl  sh_binary_cwd.sh  start_podman.sh  touch.sh  zsh_completions.sh
devx/scripts/lint/: prettier-hook.sh  sql-hook.sh  sqlc-hook.sh  sqlfluff-hook.sh  yaml-hook.sh
libs/go/log/: BUILD.bazel  log.go
libs/go/logger/: BUILD.bazel  logger.go
orgs/examples/go-lib/: BUILD.bazel  main.go  main_test.go
orgs/examples/go_lib/: BUILD.bazel  main.go  main_test.go
orgs/examples/go_server/: BUILD.bazel  Makefile
orgs/examples/go_server/cmd/: BUILD.bazel  migrate.go  root.go
orgs/examples/go_server/cmd/app/: BUILD.bazel  main.go
orgs/examples/go_server/internal/api/: BUILD.bazel  foo.proto  main.go
orgs/examples/go_server/internal/app/: BUILD.bazel  main.go
orgs/examples/go_server/internal/rpc/: BUILD.bazel  database.go  main.go  person.go
orgs/examples/go_server/internal/sqlc/: sqlc.yaml
orgs/examples/go_server/k8s/base/: app.yaml  kustomization.yaml
orgs/examples/go_server/k8s/local/: database.yaml  kustomization.yaml  patch.yaml
orgs/examples/go_server/migrations/: 000001_init.down.sql  000001_init.up.sql
orgs/examples/proto/: BUILD.bazel  Makefile  README.md  example.pb.go  example.proto  example_grpc.pb.go
orgs/examples/ts-lib/: BUILD.bazel  bin.ts  index.test.ts  index.ts
orgs/examples/ts-lib-consumer/: BUILD.bazel
repos/examples/go_server/: BUILD.bazel  Makefile  README.md  main.go
repos/examples/go_server/cmd/: BUILD.bazel  root.go
repos/examples/go_server/internal/rpc/: BUILD.bazel  database.go  main.go  person.go
repos/examples/go_server/k8s/local/: kustomization.yaml
repos/examples/proto/: BUILD.bazel  README.md  example.pb.go  example.proto  example_grpc.pb.go
repos/examples/ts-lib/: BUILD.bazel  index.test.ts
repos/finance-data/cmd/: BUILD.bazel  main.go
repos/libs/go/logger/: BUILD.bazel  logger.go
repos/scaffold/: BUILD.bazel  README.md  main.go
repos/scaffold/templates/go-lib-template/: BUILD.bazel  Makefile  main.go  main_test.go
repos/scaffold/templates/svelte-template/: package.json
repos/scaffold/templates/terraform-template/: main.tf  terragrunt.hcl
repos/web-daw/: .eslintrc.cjs  BUILD.bazel  index.html  package.json  tsconfig.json  vite.config.ts
repos/web-daw/.storybook/: main.ts  preview.ts
repos/web-daw/public/wamsdk/: wam-processor.js
repos/web-daw/public/wamsdk/DX7/: dx7-awp.js
repos/web-daw/src/: App.svelte  app.css  init.ts  main.ts
repos/web-daw/src/components/: AppShell.svelte  Card.svelte  ClearEditableText.svelte  ClickSelection.svelte  Clip.svelte  ContextMenu.svelte  Dashboard.svelte  Directory.svelte  DirectoryTree.svelte  Finder.svelte  Icon.svelte  IconButton.svelte  LabeledSection.svelte  Layout.svelte  LeftPanel.svelte  LoadCSSVars.svelte  Master.svelte  Pill.svelte  RouteRedirect.svelte  Searchbar.svelte  SelectInput.svelte  SelectableRow.svelte  Send.svelte  TabBar.svelte  Text.svelte  Theme.svelte  TopToolbar.svelte  Track.svelte  clickSelectionType.ts  index.ts
repos/web-daw/src/components/Boundaries/: Boundary.svelte  BoundaryApp.svelte  ContextMenuApp.svelte  ContextMenuBoundary.svelte  ContextMenuBoundaryApp.svelte  ContextMenuGroup.svelte  KeyboardBoundary.svelte  KeyboardBoundaryApp.svelte  KeyboardHelp.svelte
repos/web-daw/src/components/ContextMenu/: ContextMenu.svelte  types.ts
repos/web-daw/src/components/Knob/: Knob.svelte  useDelta.ts
repos/web-daw/src/components/Loader/: Loader.svelte
repos/web-daw/src/components/MPC/: MPC.svelte  Pad.svelte
repos/web-daw/src/components/Meter/: Meter.svelte  StereoMeter.svelte
repos/web-daw/src/components/PianoRoll/: Arrangement.svelte  Key.svelte  Keyboard.svelte  MidiEvent.svelte  (+4 more)
repos/web-daw/src/database/: DbInterface.ts  editor.ts  project.ts
repos/web-daw/src/daw/: Analyser.ts  Arrangement.ts  Channel.ts  Clip.ts  ClipTrack.ts  Controller.ts  FxChain.ts  Metronome.ts  Mixer.ts  Project.ts  PubSub.ts  PubSubUnit.ts  RMS.ts  Scheduler.ts  SoundSource.ts  Track.ts  UnitInterface.ts  audioContext.ts  index.ts
repos/web-daw/src/db/: DBFactory.ts  DBInterface.ts  editorDB.ts  factory.ts  index.ts  project.ts  projectDB.ts
repos/web-daw/src/lib/: LoadCSSVars.svelte
repos/web-daw/src/pages/: Dashboard.svelte  Project.svelte
repos/web-daw/src/state/: editor.ts  editorState.ts  project.ts
repos/web-daw/src/store/: contextMenu.ts  dashboard.ts  editor.ts  files.ts  index.ts  keyboard.ts  local.ts  mixer.ts  project.ts  project2.ts  url.ts  user.ts
repos/web-daw/src/ui/: index.ts
repos/web-daw/src/utils/: JSONSerializer.ts  JsonSerialize.ts  SvelteStore.ts  debug.ts  domhelpers.ts  flattenObj.ts  index.ts  instanceToJson.ts  mousePosition.ts  rafInterval.ts  randomEmoji.js  randomLinearGradient.ts  styles.ts  toClass.ts
(+491 files in other folders)
