load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@rules_oci//oci:defs.bzl", "oci_tarball")

# -----------------------------------------------------------------------------
# Gazelle Configs
# -----------------------------------------------------------------------------
load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/publiclabel/monorepo
gazelle(name = "gazelle")
# -----------------------------------------------------------------------------
# Go
# -----------------------------------------------------------------------------

# https://github.com/bazelbuild/rules_go/blob/eb03b81312c3d459fb1ffdb18da9aa122e649905/proto/core.rst#option-2-use-pre-generated-pb-go-files
#
# gazelle:go_generate_proto false

# -----------------------------------------------------------------------------
# Excludes
# -----------------------------------------------------------------------------
#
# gazelle:exclude bazel-out
# gazelle:exclude bazel-bin
# gazelle:exclude bazel-monorepo
# gazelle:exclude bazel-testlogs
# gazelle:exclude external
# gazelle:exclude bazel/go/scripts/lib
#
# -----------------------------------------------------------------------------
# Map Kinds
# -----------------------------------------------------------------------------
#
# gazelle:map_kind go_binary go_binary //bazel/go:exports.bzl
# gazelle:map_kind go_library go_library //bazel/go:exports.bzl
# gazelle:map_kind go_proto_library go_proto_library //bazel/go:exports.bzl
# gazelle:map_kind go_test go_test //bazel/go:exports.bzl
#
# gazelle:map_kind proto_library proto_library //bazel/protobuf:exports.bzl
#
# -----------------------------------------------------------------------------
# Resolves
# -----------------------------------------------------------------------------
# Gazelle generates go_proto_library + go_library rules both with the same
# importpath causing a matches multiple rules error.

# -----------------------------------------------------------------------------
# General Files
# -----------------------------------------------------------------------------

exports_files([
    ".swcrc",
    "tsconfig.json",
    "jest.config.json",
    "package.json",
])

# -----------------------------------------------------------------------------
# JS Stuff
# -----------------------------------------------------------------------------

ts_config(
    name = "tsconfig_root",
    src = "tsconfig.json",
    visibility = [":__subpackages__"],
)

ts_config(
    name = "tsconfig_svelte",
    src = "tsconfig.svelte.json",
    visibility = [":__subpackages__"],
)

load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(
    name = "node_modules",
)

# -----------------------------------------------------------------------------
# This is needed for now because skaffold doesn't handle rules_oci tarballs yet.
# REMOVE LATER
# https://github.com/GoogleContainerTools/skaffold/issues/8886
# -----------------------------------------------------------------------------

oci_tarball(
    name = "ts-own-packagejson.tar",
    image = "//bazel/js/examples/ts-own-packagejson:image",
    repo_tags = [
        "bazel:ts-own-packagejson",
    ],
)

oci_tarball(
    name = "go-server.tar",
    image = "//bazel/go/examples/go-server:image",
    repo_tags = [
        "bazel:go-server",
    ],
)
