load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@gazelle//:def.bzl", "gazelle")
load("@npm//:defs.bzl", "npm_link_all_packages")

exports_files([
    ".swcrc",
    "tsconfig.json",
    "jest.config.json",
    "package.json",
    "swc.config.json",
])

# -----------------------------------------------------------------------------
# Gazelle Configs
# -----------------------------------------------------------------------------

# gazelle:prefix github.com/publiclabel/monorepo
gazelle(name = "gazelle")
# -----------------------------------------------------------------------------
# Go
# -----------------------------------------------------------------------------

# https://github.com/bazelbuild/rules_go/blob/eb03b81312c3d459fb1ffdb18da9aa122e649905/proto/core.rst#option-2-use-pre-generated-pb-go-files
#
# gazelle:go_generate_proto false

# -----------------------------------------------------------------------------
# Excludes
# -----------------------------------------------------------------------------
#
# gazelle:exclude bazel-out
# gazelle:exclude bazel-bin
# gazelle:exclude bazel-monorepo
# gazelle:exclude bazel-testlogs
# gazelle:exclude external
# gazelle:exclude bazel/go/scripts/lib
#
# -----------------------------------------------------------------------------
# Map Kinds
# -----------------------------------------------------------------------------
#
# gazelle:map_kind go_binary go_binary //bazel/go:exports.bzl
# gazelle:map_kind go_library go_library //bazel/go:exports.bzl
# gazelle:map_kind go_proto_library go_proto_library //bazel/go:exports.bzl
# gazelle:map_kind go_test go_test //bazel/go:exports.bzl
#
# gazelle:map_kind proto_library proto_library //bazel/protobuf:exports.bzl
#
# -----------------------------------------------------------------------------
# Resolves
# -----------------------------------------------------------------------------
# Gazelle generates go_proto_library + go_library rules both with the same
# importpath causing a matches multiple rules error.

# -----------------------------------------------------------------------------
# General Files
# -----------------------------------------------------------------------------

# -----------------------------------------------------------------------------
# JS Stuff
# -----------------------------------------------------------------------------

ts_config(
    name = "tsconfig_root",
    src = "tsconfig.json",
    visibility = [":__subpackages__"],
)

ts_config(
    name = "tsconfig_svelte",
    src = "tsconfig.svelte.json",
    visibility = [":__subpackages__"],
)

npm_link_all_packages(
    name = "node_modules",
)
