module(
    name = "monorepo",
    version = "0.0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "bazel_skylib_gazelle_plugin", dev_dependency = True, version = "1.4.1")
bazel_dep(name = "rules_go", version = "0.39.1")
bazel_dep(name = "gazelle", version = "0.30.0")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "rules_oci", version = "0.3.9")

###############################################################################
# ASPECT JS STUFF
###############################################################################

bazel_dep(name = "aspect_rules_js", version = "1.25.0")

####### Node.js version #########
# By default you get the node version from DEFAULT_NODE_VERSION in @rules_nodejs//nodejs:repositories.bzl
# Optionally you can pin a different node version:
bazel_dep(name = "rules_nodejs", version = "5.8.2")

node = use_extension(
    "@rules_nodejs//nodejs:extensions.bzl",
    "node",
    dev_dependency = True,
)

node.toolchain(node_version = "16.14.2")

# Copied from here
# seems like rules_nodejs builds platform specific binaries
# https://github.com/aspect-build/rules_js/blob/93f4bf17caa05905eb31bfa5b82ee63dbbd2ad86/MODULE.bazel#L16
use_repo(node, "nodejs_darwin_arm64")

npm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "npm",
    dev_dependency = True,
)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)

use_repo(npm, "npm")

pnpm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "pnpm",
    dev_dependency = True,
)

use_repo(pnpm, "pnpm")

bazel_dep(name = "aspect_rules_ts", version = "1.3.3")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)

rules_ts_ext.deps()

use_repo(rules_ts_ext, "npm_typescript")

###############################################################################
# END ASPECT JS STUFF
###############################################################################
