load("//devx/go:exports.bzl", "go_library")

alias(
    name = "cobra-cli",
    actual = "@com_github_spf13_cobra_cli//:cobra-cli",
)

alias(
    name = "go",
    actual = "@go_sdk//:bin/go",
)

go_library(
    name = "go_lib",
    srcs = ["tools.go"],
    importpath = "github.com/publiclabel/monorepo/devx/go",
    visibility = ["//visibility:private"],
    deps = ["@com_github_golang_migrate_migrate_v4//:migrate"],
)
