sh_binary(
    name = "print_bazel_env",
    srcs = ["print_bazel_env.sh"],
    data = [
        "//repos/scaffold",
    ],
)

sh_binary(
    name = "zsh_completions",
    srcs = ["zsh_completions.sh"],
)

sh_binary(
    name = "touch",
    srcs = ["touch.sh"],
)

exports_files(["sh_binary_cwd.sh"])
