load("//bazel/go:exports.bzl", "go_library", "go_test")

go_library(
    name = "go-lib",
    srcs = ["main.go"],
    importpath = "github.com/publiclabel/monorepo/orgs/examples/go-lib",
    visibility = ["//visibility:public"],
    deps = ["@com_github_code_hex_neo_cowsay_v2//:Neo-cowsay"],
)

go_test(
    name = "go-lib_test",
    srcs = ["main_test.go"],
    embed = [":go-lib"],
)
