load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_lib",
    srcs = ["main.go"],
    importpath = "monorepo/orgs/examples/go_lib",
    visibility = ["//visibility:public"],
    deps = ["@com_github_code_hex_neo_cowsay_v2//:Neo-cowsay"],
)

go_test(
    name = "go_lib_test",
    srcs = ["main_test.go"],
    embed = [":go_lib"],
)
