load("//devx/protobuf:exports.bzl", "proto_library")
load("//devx/go:exports.bzl", "go_library", "go_proto_library")

proto_library(
    name = "example_proto",
    srcs = ["example.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "example_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "monorepo/orgs/examples/proto",
    proto = ":example_proto",
    visibility = ["//visibility:public"],
)
