load("@build_stack_rules_proto//rules:proto_compile_assets.bzl", "proto_compile_assets")
load("@build_stack_rules_proto//rules/go:proto_go_library.bzl", "proto_go_library")
load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")
load("@build_stack_rules_proto//rules:proto_compiled_sources.bzl", "proto_compiled_sources")
load("//devx/protobuf:exports.bzl", "proto_library")

proto_library(
    name = "example_proto",
    srcs = ["example.proto"],
    visibility = ["//visibility:public"],
)

proto_compile(
    name = "example_go_compile",
    output_mappings = ["example.pb.go=github.com/publiclabel/monorepo/orgs/examples/proto/example.pb.go"],
    outputs = ["example.pb.go"],
    plugins = ["@build_stack_rules_proto//plugin/golang/protobuf:protoc-gen-go"],
    proto = "example_proto",
)

proto_compiled_sources(
    name = "example_go_compiled_sources",
    srcs = ["example.pb.go"],
    output_mappings = {"example.pb.go": "github.com/publiclabel/monorepo/orgs/examples/proto/example.pb.go"},
    plugins = ["@build_stack_rules_proto//plugin/golang/protobuf:protoc-gen-go"],
    proto = "example_proto",
)

proto_go_library(
    name = "example_go_proto",
    srcs = ["example.pb.go"],
    importpath = "github.com/publiclabel/monorepo/orgs/examples/proto",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)

proto_compile_assets(
    name = "assets",
    deps = [
      ":example_go_compile"
    ],
)
