load("//bazel/go:exports.bzl", "go_binary", "go_library")
# load("//bazel/container:exports.bzl", "GO_DEFAULT_BASE", "container_image", "go_image")
# load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

go_library(
    name = "go_server_lib",
    srcs = ["main.go"],
    importpath = "github.com/publiclabel/monorepo/repos/examples/go_server",
    visibility = ["//visibility:private"],
    deps = ["//repos/examples/go_server/cmd"],
)

go_binary(
    name = "go_server",
    embed = [":go_server_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "migrations",
    srcs = glob([
        "internal/sqlc/migrations/**",
    ]),
)

# pkg_tar(
#     name = "migrations-tar",
#     srcs = [":migrations"],
#     # this is where the filegroup contents will be placed into
#     package_dir = "/etc",
#     # # this is required or else the filestructure will be flattened
#     # # https://github.com/bazelbuild/rules_docker/issues/317
#     # strip_prefix = ".",
# )
#
# container_image(
#     name = "go_image_with_migrations",
#     base = GO_DEFAULT_BASE,
#     tars = [":migrations-tar"],
# )
#
# go_image(
#     name = "go_image",
#     base = ":go_image_with_migrations",
#     embed = [":go_server_lib"],
#     visibility = ["//visibility:public"],
# )
