# load("//bazel/js:exports.bzl", "jest_test", "js_library", "nodejs_binary", "ts_project")
#
# # -----------------------------------------------------------------------------
# # Lib
# # -----------------------------------------------------------------------------
#
# ts_project(
#     name = "project",
#     srcs = [
#         "bin.ts",
#         "index.ts",
#     ],
# )
#
# js_library(
#     name = "lib",
#     # package_name = "@monorepo/orgs/examples/ts-lib",
#     visibility = ["//visibility:public"],
#     deps = [":project"],
# )
#
# nodejs_binary(
#     name = "bin",
#     data = [":lib"],
#     entry_point = "bin.js",
# )
#
# # -----------------------------------------------------------------------------
# # Test
# # -----------------------------------------------------------------------------
#
# ts_project(
#     name = "test_lib",
#     srcs = [
#         "index.test.ts",
#     ],
#     deps = [
#         ":lib",
#         "@npm//@types",
#     ],
# )
#
# jest_test(
#     name = "test",
#     data = [
#         ":test_lib",
#     ],
# )
