load("//bazel/go:exports.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "go-server_lib",
    srcs = ["main.go"],
    importpath = "github.com/publiclabel/monorepo/bazel/go/examples/go-server",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "app",
    embed = [":go-server_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "tar",
    srcs = [":app"],
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/app"],
    tars = [":tar"],
    visibility = ["//visibility:public"],
)

# bazel build //bazel/go/examples/go-image:tarball
# docker load --input $(bazel cquery --output=files //bazel/go/examples/go-image:tarball)
# docker run --rm example-go-image:latest

oci_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = ["example-go-image:latest"],
)
